fix error state when rollback success